Fixed #119 : We have now fixed the deprecated newInstance() method. Also we have encpsulated exceptions into a try catch